[package]
name = "mmlspool"
version = "0.1.0"
authors = ["Christian Krause <christian.krause@idiv.org>"]
description = "mmlspool helpers"
license = "GPL-3.0-or-later"
readme = "README.md"
documentation = "https://github.com/idiv-biodiversity/mmlspool-prometheus"
homepage = "https://github.com/idiv-biodiversity/mmlspool-prometheus"
repository = "https://github.com/idiv-biodiversity/mmlspool-prometheus"
keywords = ["spectrum-scale"]
categories = ["command-line-utilities", "filesystem"]
edition = "2021"

[dependencies]
anyhow = "1"
clap = "3.0.0-beta.5"

[profile.release]
lto = true
